add: @ry0y4n and @paruparu to CODEOWNER & update README.md
Co-authored-by: paruparu <beg5db@gmail.com>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -10,3 +10,4 @@
 /src/autogpt_plugins/api_tools @sidewaysthought
 /src/autogpt_plugins/random_values @sidewaysthought
 /src/autogpt_plugins/bluesky @hermanschutte
+/src/autogpt_plugins/pdf_to_txt @ry0y4n @paruparu
